2018-03-11  Allen D. Ball  <ball@sol.local>

	* Interim check-in: Re-factor to Spring Boot application.

2015-08-29  Allen D. Ball  <ball@sol.local>

	* src/main/java/ball/upnp/MediaServer.java:
	Re-factored MediaServer configuration and start to static main
	function.

2015-07-27  Allen D. Ball  <ball@sol.local>

	* Completed re-factoring Device and SSDP as service providers for
	EmbeddedWebXmlFragment.

2015-07-18  Allen D. Ball  <ball@sol.local>

	* Removed <media-server/> Task; renamed SSDPThread to SSDP.

2014-11-01  Allen D. Ball  <ball@sol.local>

	* Use diamond ("<>") operator where possible.

2014-09-27  Allen D. Ball  <ball@sol.local>

	* (Interim check-in) Add Apache CXF and Spring framework
	dependencies.

2014-07-29  Allen D. Ball  <ball@sol.local>

	* Changed all Ant Task implementations to call
	AnnotatedTask.validate() in execute() and applied
	AntTaskAttributeConstraint annotations.

2014-07-05  Allen D. Ball  <ball@sol.local>

	* src/main/java/ball/upnp/ant/taskdefs/MediaServerTask.java:
	Launch web browser after starting the server.

	* pom.xml: Specify JRE dependency,

2014-07-02  Allen D. Ball  <ball@sol.local>

	* Renamed iprotium.upnp to ball.upnp.

2014-03-22  Allen D. Ball  <ball@sol.local>

	* Silence JDK 1.7 compilation warnings.

2014-01-26  Allen D. Ball  <ball@10-0-1-2.lan>

	* src/main/java/iprotium/upnp/Device.java:
	Configure web application Context in LifecycleListenerImpl.

2014-01-05  Allen D. Ball  <ball@10-0-1-2.lan>

	* src/main/java/iprotium/upnp/SSDPThread.java:
	Implement LifecycleListener and replace alive() and byebye()
	callbacks with add(Device...) and remove(Device...) methods.

2014-01-03  Allen D. Ball  <ball@10-0-1-2.lan>

	* src/main/java/iprotium/upnp/Device.java:
	Call SSDPThread.byebye() on Tomcat stop.
	Configure and install Servlets in a StandardContext subclass.
	Added Velocity servlet and SSDP cache page.
	Handle Device configuration in a Server LifecycleListener.
