@@ -1,14 +1,14 @@
 /*
  * $Id$
  *
- * Copyright 2016 Allen D. Ball.  All rights reserved.
+ * Copyright 2016 - 2019 Allen D. Ball.  All rights reserved.
  */
 /**
  * Classes specific to
  * {@link.uri http://www.upnp.org/ Universal Plug and Play (UPnP)}
  * (moved to {@link.uri https://openconnectivity.org/developer/specifications/upnp-resources/upnp-developer-resources}).
  *
- * @author {@link.uri mailto:ball@iprotium.com Allen D. Ball}
+ * @author {@link.uri mailto:ball@hcf.dev Allen D. Ball}
  */
 @Manifest.Section
 package ball.upnp;
